--- a/tr/hakkimizda/index.html
+++ b/tr/hakkimizda/index.html
@@ -61,10 +61,7 @@
                         border-top: 2px solid black;
                         height: 70px;
                         justify-content: flex-end;
-                        align-items: flex-end;">Biz</span> geleceği
-                        <br>
-                        ilham veren<br>
-                        mekanlar yaratırız.
+                        align-items: flex-end;">Yarına</span> <br>ilham veren <br> mekanlar <br>tasarlıyoruz.
                     </h3>
                 </div>
                 <div class="circle about">
@@ -73,13 +70,10 @@
             </div>
 
 
-            <p class="about-p">Berkay Yıldız Mimarlık, çağdaş mimarlık, iç mekan tasarımı ve peyzaj entegrasyonu
-                konusunda uzmanlaşmış İzmir merkezli bir stüdyodur. Kurulduğumuz günden bu yana yalnızca işlevsel
-                değil, aynı zamanda çevreleriyle derin bir bağ kuran mekanlar yaratmaya kendimizi adadık.<br>
+            <p style="margin-top: 270px;" class="about-p">Berkay Yıldız Mimarlık,  peyzaj, iç mimari ve mimarinin entegrasyonu üzerine uzmanlaşmış İzmir merkezli bir stüdyodur. Kuruluşumuzdan bu yana, yalnızca işlevsel değil, aynı zamanda çevresiyle derin bir bağ kuran mekanlar yaratmaya kendimizi adadık.<br>
                 <br>
-                Sürecin her aşamasında müşterilerimiz ve proje ortaklarımızla yakın iş birliği yapıyoruz; ruhsat
-                alma, uygulama, iç mekan tasarımı ve görselleştirme dahil olmak üzere. Böylece orijinal amaç,
-                sorunsuz bir şekilde nihai sonuca dönüşür.
+                Tasarımların kusursuz bir şekilde nihai sonuca dönüşmesini sağlamak için ruhsat-uygulama projesi, iç mekan tasarımı ve görselleştirmeler dahil olmak üzere sürecin her aşamasında müşteriler ve proje ortaklarıyla yakın bir iş birliği içinde çalışıyoruz.
+
             </p>
         </div>
     </section>
