--- a/tr/hizmetlerimiz/index.html
+++ b/tr/hizmetlerimiz/index.html
@@ -58,9 +58,9 @@
 
                 <p class="service-p">
                     Berkay Yıldız Mimarlık'ta sadece mekanlar tasarlamıyoruz; deneyimler yaratıyoruz. Konsept
-                    geliştirmeden ince yapım detaylarına kadar her proje—ister konut ister ticari olsun—
-                    kalite, yenilik ve sürdürülebilirliğe bağlılığımızı yansıtır. Estetiğin ötesine geçen
-                    tasarım tutkusuyla fikirleri işlevsel, ilham verici mekanlara dönüştürüyoruz.
+                    geliştirmeden proje detaylarına kadar her proje — ister konut ister ticari olsun —
+                    kalite, yenilik ve sürdürülebilirliğe olan bağlılığımızı yansıtır. Estetiğin ötesine geçen
+                    tasarım tutkusuyla fikirleri işlevsel, ilham verici mekanlara dönüştürmeyi hedefliyoruz.
                 </p>
 
             </div>
@@ -68,10 +68,10 @@
                 <div class="service-image-wrapper">
                     <img class="service-image" src="/images/table-chair.jpg" alt="placeholder">
                 </div>
-                <h3 class="service-h3">İç Tasarım</h3>
+                <h3 class="service-h3">İç Mimarlık</h3>
                 <p class="service-p">Berkay Yıldız Mimarlık olarak her projenin genel uyumunu sağlamak için
-                    mimarlık ve iç tasarım arasında kesintisiz bir entegrasyonun önemine inanıyoruz. Bu nedenle
-                    sadece mimari tasarımlar yapmakla kalmıyor, aynı zamanda özenle hazırlanmış iç tasarım
+                    mimari ve iç mimari arasında kesintisiz bir entegrasyonun önemine inanıyoruz. Bu nedenle
+                    sadece mimari tasarımlar yapmakla kalmıyor, aynı zamanda özenle hazırlanmış iç mekan
                     çözümleri de sunuyoruz.
                 </p>
                 <div class="horizontal-line line2"></div>
@@ -84,7 +84,7 @@
                 <h3 class="service-h3">Görselleştirme</h3>
                 <p class="service-p">Kendimizi sadece görüntü üreticileri olarak değil, hikaye anlatıcıları olarak
                     görüyoruz. Amacımız sadece görsel olarak etkileyici içerik üretmek değil, her projenin
-                    özünü ve gerçek potansiyelini otantik bir şekilde yakalamaktır.
+                    özünü ve gerçek potansiyelini yakalamaktır.
                     <br>
                     <br>
                     Teslim ettiğimiz görsellerde müşterilerimizin gurur duymasını hedefliyoruz ve ortak
@@ -100,7 +100,7 @@
             <div class="horizontal-line left-line"></div>
             <div class="circle" style="display: none;"></div>
             <div class="rectanglular-bg"></div>
-            <a href="https://berkayyildizmimarlik.com/tr/calismalarimiz/"
+            <a href="https://berkayyildizmimarlik.com/tr/projeler/"
                 style="text-decoration: none; color: black; height: 100%;">
                 <p class="view-portfolio-p">Portföyü Gör</p>
             </a>
