--- a/tr/iletisim/index.html
+++ b/tr/iletisim/index.html
@@ -51,7 +51,8 @@
     <section class="contact-section">
         <div class="contact-upper">
             <h3 class="contact-h3">Bizimle İletişime Geçin</h3>
-            <p class="contact-p">Bağlantıda Kalın</p>
+            <!--             <p class="contact-p">Bağlantıda Kalın</p>
+ -->
         </div>
         <div class="contact-lower">
             <div></div>
