--- a/tr/projeler/index.html
+++ b/tr/projeler/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description"
         content="Berkay Yıldız Mimarlık portföyünü inceleyin, yenilikçi tasarımlar ve çeşitli mimari tarzlarda tamamlanmış projeleri keşfedin.">
     <meta property="og:image" content="https://berkayyildizmimarlik.com/images/works-banner.jpg">
-    <meta property="og:url" content="https://berkayyildizmimarlik.com/tr/calismalarimiz">
+    <meta property="og:url" content="https://berkayyildizmimarlik.com/tr/projeler">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Çalışmalarımız | Berkay Yıldız Mimarlık">
