--- a/tr/navbar-tr.html
+++ b/tr/navbar-tr.html
@@ -12,7 +12,7 @@
             <li><a href="/tr/hizmetlerimiz/">Hizmetlerimiz</a></li>
             <li><a href="/tr/hakkimizda/">Hakkımızda</a></li>
             <li><a href="/tr/iletisim/">İletişim</a></li>
-            <li><a href="/tr/calismalarimiz/">Çalışmalarımız</a></li>
+            <li><a href="/tr/projeler/">Projeler</a></li>
         </ul>
         <ul class="navbar-lang-links">
             <li><a href="/tr/anasayfa/" class="active">TR</a></li>
