--- a/en/navbar-en.html
+++ b/en/navbar-en.html
@@ -1,9 +1,9 @@
 <nav class="navbar">
-    <img src="/images/logo.png" alt="navbar logo" width="140" style="margin-right: auto;">
-    <button class="navbar-toggle" id="navbar-toggle" aria-label="Toggle navigation">
-        <span></span>
-        <span></span>
-        <span></span>
+    <a href="https://berkayyildizmimarlik.com/"><img src="/images/logo.png" alt="navbar logo" width="140"
+            style="margin-right: auto;"></a>
+    <span></span>
+    <span></span>
+    <span></span>
     </button>
     <div class="navbar-menu">
         <ul class="navbar-links">
