--- a/tr/hakkimizda/index.html
+++ b/tr/hakkimizda/index.html
@@ -41,6 +41,17 @@
 
         gtag('config', 'G-JCX6EMK0LB');
     </script>
+    <style>
+        .about-p {
+            margin-top: 270px;
+        }
+
+        @media (max-width: 768px) {
+            .about-p {
+                margin-top: 20px;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -70,9 +81,13 @@
             </div>
 
 
-            <p style="margin-top: 270px;" class="about-p">Berkay Yıldız Mimarlık,  peyzaj, iç mimari ve mimarinin entegrasyonu üzerine uzmanlaşmış İzmir merkezli bir stüdyodur. Kuruluşumuzdan bu yana, yalnızca işlevsel değil, aynı zamanda çevresiyle derin bir bağ kuran mekanlar yaratmaya kendimizi adadık.<br>
+            <p class="about-p">Berkay Yıldız Mimarlık, peyzaj, iç mimari ve mimarinin
+                entegrasyonu üzerine uzmanlaşmış İzmir merkezli bir stüdyodur. Kuruluşumuzdan bu yana, yalnızca işlevsel
+                değil, aynı zamanda çevresiyle derin bir bağ kuran mekanlar yaratmaya kendimizi adadık.<br>
                 <br>
-                Tasarımların kusursuz bir şekilde nihai sonuca dönüşmesini sağlamak için ruhsat-uygulama projesi, iç mekan tasarımı ve görselleştirmeler dahil olmak üzere sürecin her aşamasında müşteriler ve proje ortaklarıyla yakın bir iş birliği içinde çalışıyoruz.
+                Tasarımların kusursuz bir şekilde nihai sonuca dönüşmesini sağlamak için ruhsat-uygulama projesi, iç
+                mekan tasarımı ve görselleştirmeler dahil olmak üzere sürecin her aşamasında müşteriler ve proje
+                ortaklarıyla yakın bir iş birliği içinde çalışıyoruz.
 
             </p>
         </div>
